--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,5 +5,5 @@
     まず初めにサインアップしようぜっ！
   </h2>
 
-  <%= link_to "サインアップ！", '#', class: "btn btn-lg btn-primary" %>
+  <%= link_to "サインアップ！", signup_path , class: "btn btn-lg btn-primary" %>
 </div>
