user update and authorization

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,9 +1,9 @@
 <div class="center jumbotron">
-  <h1>うぃいいいいいいいぃぃぃぃぃ！</h1>
+  <h1>ぶわっはっはっは！</h1>
 
   <h2>
-    まず初めにサインアップしようぜっ！
+    登録したいみたいだな！
   </h2>
 
-  <%= link_to "サインアップ！", signup_path , class: "btn btn-lg btn-primary" %>
+  <%= link_to "このボタンだよ、はよ押しな！", signup_path , class: "btn btn-lg btn-primary" %>
 </div>
