--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <body>
     <header class="navbar navbar-fixed-top navbar-inverse">
       <div class="container">
-        <%= link_to "sample app", '#', id: "logo" %>
+        <%= link_to "俺の自作アプリ１号", '#', id: "logo" %>
         <nav>
           <ul class="nav navbar-nav navbar-right">
             <li><%= link_to "Home",  home_path %></li>
@@ -25,7 +25,7 @@
                 </a>
                 <ul class="dropdown-menu">
                   <li><%= link_to "Profile", current_user %></li>
-                  <li><%= link_to "Settings", '#' %></li>
+                  <li><%= link_to "Settings", edit_user_path  %></li>
                   <li class="divider"></li>
                   <li>
                     <%= link_to "Log out", logout_path, method: :delete %>
@@ -40,6 +40,9 @@
       </div>      
     </header>   
     <div class="container">
+     <% flash.each do |message_type, message| %>
+       <div class="alert alert-<%= message_type %>"><%= message %></div>
+     <% end %>
      <%= yield %>
      <footer class="footer">
        <nav>
