--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Sign up</h1>
+<h1>これ埋めて登録しな</h1>
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
@@ -15,19 +15,19 @@
             </ul>
           </div>
         <% end %>      
-      <%= f.label :name %>
+      <%= f.label :名前 %>
       <%= f.text_field :name %>
 
-      <%= f.label :email %>
+      <%= f.label :メアド %>
       <%= f.email_field :email %>
 
-      <%= f.label :password %>
+      <%= f.label :パスワード %>
       <%= f.password_field :password %>
 
-      <%= f.label :password_confirmation, "Confirmation" %>
+      <%= f.label :password_confirmation, "もっかい打ってみろよ" %>
       <%= f.password_field :password_confirmation %>
 
-      <%= f.submit "Create my account", class: "btn btn-primary" %>
+      <%= f.submit "ファイナルアンサー？", class: "btn btn-primary" %>
     <% end %>
   </div>
 </div>
