--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -42,6 +42,11 @@
                          <%= link_to "編集", edit_tweet_path(tweet)%>
                          <%= link_to "削除", tweet, method: :delete,data: { confirm: "二言はないな？" } %>
                        <% end %>
+                       <% if current_user.liked_by?(tweet.id) %>
+                        <td><%= link_to '❤', destroy_like_path(tweet), method: :DELETE, remote: true %> <%= tweet.likes.count %></td>
+                       <% else %>
+                        <td><%= link_to '♡', create_like_path(tweet), method: :POST, remote: true %> <%= tweet.likes.count %></td>
+                       <% end %>  
                   </span>
               </li>
             <% end %>
