--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,3 +1,3 @@
-<h1>StaticPages#help</h1>
-<p>Helpだって？ばぁか、誰が助けてなんてやるか！自分でググってこい！！</p>
+<h1>Helpだって？ばぁか、誰が助けてやるか！自分でググってこい！</h1>
+
 <p>Find me in app/views/static_pages/help.html.erb</p>
