--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -138,7 +138,7 @@ input {
   }
   .user {
     margin-top: 5em;
-    padding-top: 0;
+    padding: 0;
   }
   .content {
     display: block;
@@ -197,7 +197,7 @@ aside {
 }
 
 .users.follow {
-  padding: 0;
+  padding: 0px 50px;
 }
 
 .like-link {
