--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
             <li><%= link_to "Home",  home_path %></li>
             <li><%= link_to "Help",  help_path %></li>
             <% if logged_in? %>
-              <li><%= link_to "Users", '#' %></li>
+              <li><%= link_to "Users", current_user %></li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                   Account <b class="caret"></b>
