--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -33,7 +33,7 @@
         <%= will_paginate @tweets %>
         <ol class="tweets">
             <% @tweets.each do |tweet| %>
-              <li id=="tweet-<%= tweet.id %>">
+              <li id="tweet-<%= tweet.id %>">
                   <span class="user"><%= link_to tweet.user.name, tweet.user %></span>
                   <span class="content"><%= tweet.content %></span>
                   <span class="timestamp">
@@ -43,9 +43,9 @@
                          <%= link_to "削除", tweet, method: :delete,data: { confirm: "二言はないな？" } %>
                        <% end %>
                        <% if current_user.liked_by?(tweet.id) %>
-                        <td><%= link_to '❤', destroy_like_path(tweet), method: :DELETE, remote: true %> <%= tweet.likes.count %></td>
+                        <td><%= link_to '❤', unlike_path(tweet), method: :DELETE, remote: true %> <%= tweet.likes.count %></td>
                        <% else %>
-                        <td><%= link_to '♡', create_like_path(tweet), method: :POST, remote: true %> <%= tweet.likes.count %></td>
+                        <td><%= link_to '♡', like_path(tweet), method: :POST, remote: true %> <%= tweet.likes.count %></td>
                        <% end %>  
                   </span>
               </li>
