--- a/app/views/users/liked_tweets.html.erb
+++ b/app/views/users/liked_tweets.html.erb
@@ -28,7 +28,7 @@
             </div>
             <% if @users.any? %>
             <div class="user_avatars">
-                <% @users.each do |user| %>
+                <% @users.each do |tweets| %>
                 <% end %>
             </div>
             <% end %>
@@ -37,14 +37,26 @@
     <div class="col-md-8">
         <h3><%= @title %></h3>
         <% if @users.any? %>
-            <ul class="users follow">
-                <% @users.each do |user| %>
-                    <li id="tweet-<%= user.id %>">
-                        <span class="user"><%=  link_to user.name, user %></span>
-                    </li>
-                <% end %>
-            </ul>
-            <%= will_paginate %>
+           <ol class="tweets">
+            <% @users.each do |tweet| %>
+              <li id="tweet-<%= tweet.id %>">
+                  <span class="user"><%= link_to tweet.user.name, tweet.user %></span>
+                  <span class="content"><%= tweet.content %></span>
+                  <span class="timestamp">
+                       投稿日 <%=time_ago_in_words(tweet.created_at) %> 前
+                       <% if current_user?(tweet.user) %>
+                         <%= link_to "編集", edit_tweet_path(tweet)%>
+                         <%= link_to "削除", tweet, method: :delete,data: { confirm: "二言はないな？" } %>
+                       <% end %>
+                       <% if current_user.liked_by?(tweet.id) %>
+                        <td><%= link_to '❤', unlike_path(tweet), method: :DELETE, remote: true %> <%= tweet.likes.count %></td>
+                       <% else %>
+                        <td><%= link_to '♡', like_path(tweet), method: :POST, remote: true %> <%= tweet.likes.count %></td>
+                       <% end %>  
+                  </span>
+              </li>
+            <% end %>
+           </ol>
         <% end %>
     </div>
 </div>
