--- a/app/views/users/show_followers.html.erb
+++ b/app/views/users/show_followers.html.erb
@@ -45,6 +45,12 @@
                 <% end %>
             </ul>
             <%= will_paginate %>
+        <% else %>
+            <% if current_user?(@user) %>
+               <ul>０人？気にすんなって、世界がまだおまえに気づけてないだけだから</ul>
+            <% else %>
+               <ul>いないみたいｗ</ul>  
+            <% end %>        
         <% end %>
     </div>
 </div>
