--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,7 +4,6 @@
       <section class="user_info">
         <h1><%= current_user.name %></h1>
         <p><%= link_to "プロフィール", current_user %></p>
-        <p><%= current_user.tweets.count %> ツイート </p>
       </section>
       <section class="tweet_form">
         <%= form_for(@tweet) do |f| %>
@@ -43,9 +42,15 @@
                          <%= link_to "削除", tweet, method: :delete,data: { confirm: "二言はないな？" } %>
                        <% end %>
                        <% if current_user.liked_by?(tweet.id) %>
-                        <td><%= link_to '❤', unlike_path(tweet), method: :DELETE, remote: true %> <%= tweet.likes.count %></td>
+                        <td>
+                         <%= link_to '❤', unlike_path(tweet), method: :DELETE, remote: true %> 
+                         <%= link_to tweet.likes.count, likees_path(tweet) %>
+                        </td>
                        <% else %>
-                        <td><%= link_to '♡', like_path(tweet), method: :POST, remote: true %> <%= tweet.likes.count %></td>
+                        <td>
+                         <%= link_to '♡', like_path(tweet), method: :POST, remote: true %>
+                         <%= link_to tweet.likes.count, likees_path(tweet) %>
+                        </td>
                        <% end %>  
                   </span>
               </li>
