--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -40,7 +40,7 @@
     </aside>    
     <div class="col-md-8">
     <% if @user.tweets.any? %>
-        <h3>つぶやきどもだ！ (<%= @user.tweets.count %>)</h3>
+        <h3>ツイート一覧</h3>
         <ol class="tweets">
             <% @tweets.each do |tweet| %>
                 <li id="tweet-<%= tweet.id %>">
@@ -52,6 +52,13 @@
                 </li>
             <% end %>
         </ol>
+    <% else %>
+        <h3>ツイート一覧</h3>
+            <% if current_user?(@user) %>
+               <ul>ツイートしてみよっ！んなっ！！！</ul>
+            <% else %>
+               <ul>こいつ見る専だって</ul>  
+            <% end %>    
     <% end %>
     </div>
 </div>         
