--- a/app/views/users/show_follow.html.erb
+++ b/app/views/users/show_follow.html.erb
@@ -45,6 +45,12 @@
                 <% end %>
             </ul>
             <%= will_paginate %>
+        <% else %>
+            <% if current_user?(@user) %>
+               <ul>なんでここに来た…おまえ誰もフォローしてないぞ？</ul>
+            <% else %>
+               <ul>誰もフォローしてないって、こいつスカしてるよな。</ul>  
+            <% end %>      
         <% end %>
     </div>
 </div>
