--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -57,7 +57,7 @@
             <% if current_user?(@user) %>
                <ul>ツイートしてみよっ！んなっ！！！</ul>
             <% else %>
-               <ul>こいつ見る専だって</ul>  
+               <ul>こいつ見る専だからないっぽい</ul>  
             <% end %>    
     <% end %>
     </div>
